[package]
name = "forc-wallet"
version = "0.8.2"
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/forc-wallet"
description = "A forc plugin for generating or importing wallets using BIP39 phrases."

[dependencies]
anyhow = "1.0"
clap = { version = "4.2.4", features = ["derive"] }
eth-keystore = { version = "0.5" }
forc-tracing = "0.47.0"

# Dependencies from the `fuel-vm` repository:
fuel-crypto = { version = "0.54.1" }
fuel-types = { version = "0.54.1" }

# Dependencies from the `fuels-rs` repository:
fuels = "0.64.0" 
fuels-core = "0.64.0" 

futures = "0.3"
hex = "0.4"
home = "0.5.3"
rand = { version = "0.8.4", default-features = false }
rpassword = "7.2"
serde_json = "1.0"
termion = "2.0"
tiny-bip39 = "1.0"
tokio = { version = "1.10.1", features = ["full"] }
url = "2.3"

[lib]
name = "forc_wallet"
path = "src/lib.rs"

[[bin]]
name = "forc-wallet"
path = "src/main.rs"

[patch.crates-io]
fuels-core = { git = "https://github.com/fuelLabs/fuels-rs", rev = "73b907d93dfda87cfd5a2e5da1b2070da4683684" }
fuels-accounts = { git = "https://github.com/fuelLabs/fuels-rs", rev = "73b907d93dfda87cfd5a2e5da1b2070da4683684" }
fuels-programs = { git = "https://github.com/fuelLabs/fuels-rs", rev = "73b907d93dfda87cfd5a2e5da1b2070da4683684" }
fuels = { git = "https://github.com/fuelLabs/fuels-rs", rev = "73b907d93dfda87cfd5a2e5da1b2070da4683684" }
